@@ -41,7 +41,7 @@ __assert_func NOSIGFE
 __assertfail NOSIGFE
 __b64_ntop NOSIGFE
 __b64_pton NOSIGFE
-__cxa_atexit SIGFE
+__cxa_atexit = cygwin__cxa_atexit SIGFE
 __cxa_finalize SIGFE
 __dn_comp SIGFE
 __dn_expand SIGFE
